--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "jwt-simple": "^0.5.6",
     "mocha": "^9.1.2",
     "mysql2": "^2.3.0",
     "passport": "^0.5.0",
     "passport-http-bearer": "^1.0.1",
+    "passport-local": "^1.0.0",
     "sequelize": "^6.6.5"
   }
 }
